--- a/package.json
+++ b/package.json
@@ -29,5 +29,9 @@
   },
   "devDependencies": {
     "@types/supertest": "^2.0.14"
+  },
+  "engines": {
+    "npm": "9.6.7",
+    "node": "18.17.1"
   }
 }
